Filled out README questions and began adding and editing basic HTML elements.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
         <link rel="stylesheet" href="./styles/style.css" />
        
 
-        <title>Cool Web</title>
+        <title>About Me</title>
     </head>
 
     <body>
-        <header>
-            <h1>Cool Web Project</h1>
-        </header>
 
-        <main></main>
+        <main>
+            <section>
+                <h1>My name is David Francisco!</h1>
+                <p>
+                    I use <span class="bold">he/him</span> pronouns.
+                    I live in <span class="italics">San Diego, CA.</span>
+                </p>    
+            </section>
+        </main>
 
         <footer>&copy; 2021 Aspiring Software Developer</footer>
 
