more HTML elements. Validated in browser.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                 <p>
                     I use <span class="bold">he/him</span> pronouns.
                     I live in <span class="italics">San Diego, CA.</span>
-                </p>    
+                </p>
+                <button id="animalButton">What's my favorite animal?</button>
+                <div id="animalDiv" class="hidden">A tiger!</div>
             </section>
         </main>
 
