Finished up the button javascript and added an image in the HTML file.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
         <link rel="stylesheet" href="./styles/style.css" />
-       
+
 
         <title>About Me</title>
     </head>
@@ -21,7 +21,9 @@
                     I live in <span class="italics">San Diego, CA.</span>
                 </p>
                 <button id="animalButton">What's my favorite animal?</button>
-                <div id="animalDiv" class="hidden">A tiger!</div>
+                <div id="animalDiv" class="hidden">A tiger!
+                    <img src="https://media.istockphoto.com/photos/siberian-tiger-portrait-picture-id1018245126?s=612x612" alt="a tiger">
+                </div>
             </section>
         </main>
 
