Added the hidden class to hide the image, then added CSS styles.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                     I live in <span class="italics">San Diego, CA.</span>
                 </p>
                 <button id="animalButton">What's my favorite animal?</button>
-                <div id="animalDiv" class="hidden">A tiger!
-                    <img src="https://media.istockphoto.com/photos/siberian-tiger-portrait-picture-id1018245126?s=612x612" alt="a tiger">
+                <div id="animalDiv" class="hidden">
+                    <img id = 'tiger' src="https://media.istockphoto.com/photos/siberian-tiger-portrait-picture-id1018245126?s=612x612" alt="a tiger">
+                <p id = 'tigerText'>A tiger!</p>
                 </div>
             </section>
         </main>
