--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
         <link rel="stylesheet" href="./styles/style.css" />
-
-
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Square+Peg&display=swap');
+            </style>
         <title>About Me</title>
     </head>
 
